# qmltermwidget

./: .gitignore  CMakeLists.txt  qmldir
src/: QMLTermScrollbar.qml  qmltermwidget_plugin.cpp
test-app/: test-app.qml
